Terminado seção sobre e seção métricas

--- a/Html5-Css3/index.html
+++ b/Html5-Css3/index.html
@@ -25,6 +25,36 @@
                 </div>
             </nav>
     </header>
+    <section id="sobre">
+        <span>Sobre nós</span>
+        <h1>Por que somos direferentes?</h1>
+        <p>Nós focamos nos detalhes de tudo o que fazemos. Tudo para ajudar as empresas
+            de todo o mundo a se conectarem naquilo que realmente é importante para elas.
+        </p>
+    </section>
+    <section id="metricas">
+        <div class="box-metricas">
+            <span>400+</span>
+            <b>Projetos concluídos</b>
+            <p>Nós ajudamos a construir mais de 400 projetos incríveis</p>
+        </div>
+        <div class="box-metricas">
+            <span>100+</span>
+            <b>Colaboradores</b>
+            <p>Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes</p>
+        </div>
+        <div class="box-metricas">
+            <span>200+</span>
+            <b>Downloads</b>
+            <p>Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+        </div>
+        <div class="box-metricas">
+            <span>500+</span>
+            <b>Reviews 5 estrelas</b>
+            <p>Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos</p>
+        </div>
+
+    </section>
     
 </body>
 </html>
