Refatorando css e terminando descrição de vagas

--- a/Html5-Css3/index.html
+++ b/Html5-Css3/index.html
@@ -8,22 +8,21 @@
     <title>OptimusTech</title>
 </head>
 <body>
-    <header>
-            <nav>
-                <div id="logo">
-                    <img src="./img/logo.svg" alt="">
-                </div>
-                <ul>
-                    <li>Home</li>
-                    <li>Produtos</li>
-                    <li>Recursos</li>
-                    <li>Sobre nós</li>
-                </ul>
-                <div id="botoes">
-                    <span>Entrar</span>
-                    <button>Cadastrar</button>
-                </div>
-            </nav>
+      <nav>
+            <div id="logo">
+                <img src="./img/logo.svg" alt="">
+            </div>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Produtos</a></li>
+                <li><a href="">Recursos</a></li>
+                <li><a href="">Sobre nós</a></li>
+            </ul>
+            <div id="botoes">
+                <span>Entrar</span>
+                <button>Cadastrar</button>
+            </div>
+        </nav>
     </header>
     <section id="sobre">
         <span>Sobre nós</span>
@@ -54,13 +53,40 @@
             <p>Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos</p>
         </div>
     </section>
-    <section id="vagas">
+    <section id="vagas-titulo">
         <div>
             <span>Vagas abertas</span>
             <h2>Estamos procurando por talentos</h2>
             <p> Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
         </div>
         <img src="img/talentos.png" alt="">
+    </section>
+    <section id="vagas-descricao">
+        <div id="box-vagas">
+            <span class="titulo-vaga">Design</span>
+            <div class="vaga">
+                <span>Product Designer</span>
+                <p>Full-Time&nbsp;&nbsp;FaixaSalarial: R$ 7.000</p>
+            </div>
+            <div class="vaga">
+                <span>UX Designer</span>
+                <p>Full-Time&nbsp;&nbsp;FaixaSalarial: R$ 6.000</p>
+            </div>
+            <span class="titulo-vaga">Desenvolvimento de Software</span>
+            <div class="vaga">
+                <span>Desenvolvedor(a) ios</span>
+                <p>Full-Time&nbsp;&nbsp;FaixaSalarial: R$ 8.000</p>
+            </div>
+            <div class="vaga">
+                <span>Desenvolvedor(a) Front-End</span>
+                <p>Full-Time&nbsp;&nbsp;FaixaSalarial: R$ 8.000</p>
+            </div>
+            <div class="vaga">
+                <span>Desenvolvedor(a) Back-End</span>
+                <p>Full-Time&nbsp;&nbsp;FaixaSalarial: R$ 8.000</p>
+            </div>
+
+        </div>
     </section>
     
 </body>
