--- a/Html5-Css3/index.html
+++ b/Html5-Css3/index.html
@@ -24,14 +24,14 @@
             </div>
         </nav>
     </header>
-    <section id="sobre">
+    <section id="sobre" class="container-flex">
         <span>Sobre nós</span>
         <h1>Por que somos direferentes?</h1>
         <p>Nós focamos nos detalhes de tudo o que fazemos. Tudo para ajudar as empresas
             de todo o mundo a se conectarem naquilo que realmente é importante para elas.
         </p>
     </section>
-    <section id="metricas">
+    <section id="metricas" class="container-flex">
         <div class="box-metricas">
             <span>400+</span>
             <b>Projetos concluídos</b>
@@ -54,7 +54,7 @@
         </div>
     </section>
     <section id="vagas-titulo">
-        <div>
+        <div class="container-flex">
             <span>Vagas abertas</span>
             <h2>Estamos procurando por talentos</h2>
             <p> Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
@@ -85,9 +85,25 @@
                 <span>Desenvolvedor(a) Back-End</span>
                 <p>Full-Time&nbsp;&nbsp;FaixaSalarial: R$ 8.000</p>
             </div>
-
         </div>
     </section>
-    
+    <section id="comentarios" class="container-flex">
+        <span>Veja o que nossos colaboradores falam sobre nós</span>
+        <h2>OptimusTech se importa com a saúde dos seus colaboradores e
+            sempre procura nos dar todo tipo de auxílio possível.
+        </h2>
+        <img src="img/Avatar.png" alt="Imagem da Júlia Castro">
+        <span>Júlia Castro</span>
+        <p>Desenvolvedora Web</p>
+    </section>
+    <section id="formulario" class="container-flex">
+        <h2>Acompanhe as nossas oportunidades</h2>
+        <p>Seja o primeiro a saber quando novas vagas serão abertas!</p>
+        <div>
+            <input type="email" placeholder="Seu e-mail">
+            <button>Cadastrar</button>
+        </div>
+        <p>&#169; 2022 OptimusTech. Todos os direitos reservados</p>
+    </section>
 </body>
 </html>
