Terminando layout 428px

--- a/Mobile-Fist/index.html
+++ b/Mobile-Fist/index.html
@@ -74,8 +74,79 @@
                 </div>
             </div>
         </section>
+        <section class="carrossel">
+            <h2>Mais vendidos</h2>
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="./Vendors/img/ApacheKafka.png" alt="Livro ApacheKafka"></div>
+                    <div class="swiper-slide"><img src="./Vendors/img/Guia Front-end.png" alt="Livro ApacheKafka"></div>
+                    <div class="swiper-slide"><img src="./Vendors/img/Javascript.png" alt="Livro ApacheKafka"></div>
+                    <div class="swiper-slide"><img src="./Vendors/img/Portugol.png" alt="Livro ApacheKafka"></div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container-card">
+                <div class="left">
+                    <h3>Talvez você também se interesse por...</h3>
+                    <h2>Angular 11 e Firebase</h2>
+                    <p>Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    <div>
+                        <img src="./Vendors/img/Favoritos-1.svg" alt="">
+                        <img src="./Vendors/img/Compras.svg" alt="">
+                    </div>
+                </div>
+                <div class="right">
+                    <img src="./Vendors/img/Angular-1.png" alt="">
+                    <span>Saiba mais</span>
+                </div>
+            </div>
+        </section>
+        <section class="topicos">
+            <h2>Tópicos visitados Recentemente</h2>
+            <div class="container-topicos">
+                <span>
+                    <a href="">Android</a>
+                </span>
+                <span>
+                    <a href="">Marketing Digital</a>
+                </span>
+                <span>
+                    <a href="">Agile</a>
+                </span>
+                <span>
+                    <a href="">Startups</a>
+                </span>
+                <span>
+                    <a href="">HTML & CSS</a>
+                </span>
+                <span>
+                    <a href="">Python</a>
+                </span>
+                <span>
+                    <a href="">OO</a>
+                </span>
+                <span>
+                    <a href="">Java</a>
+                </span>
+            </div>
+        </section>
+        <footer>
+            <h3>Fique por dentro das novidades!</h3>
+            <p>Atualizações de e-books, novos livros, promoções e outros.</p>
+            <input type="email" placeholder="Cadastre seu e-mail"/>
+            <hr/>
+            <h2>Grupo Alura</h2>
+        </footer>
+       
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./Vendors/js/swiper.js"></script>
 </body>
 </html>
+
