Terminando layout mobile

--- a/Mobile-Fist/index.html
+++ b/Mobile-Fist/index.html
@@ -74,6 +74,78 @@
                 </div>
             </div>
         </section>
+        <section class="carrossel">
+            <h2>Mais Vendidos</h2>
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="./Vendors/img/ApacheKafka.png" alt="Livro ApacheKafka"></div>
+                    <div class="swiper-slide"><img src="./Vendors/img/Guia Front-end.png" alt="Livro ApacheKafka"></div>
+                    <div class="swiper-slide"><img src="./Vendors/img/Javascript.png" alt="Livro ApacheKafka"></div>
+                    <div class="swiper-slide"><img src="./Vendors/img/Portugol.png" alt="Livro ApacheKafka"></div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container-card">
+                <div class="left">
+                    <h3>Talvez você também se interesse por...</h3>
+                    <h2>Angular 11 e Firebase</h2>
+                    <p>Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    <div>
+                        <img src="./Vendors/img/Favoritos-1.svg" alt="">
+                        <img src="./Vendors/img/Compras.svg" alt="">
+                    </div>
+                </div>
+                <div class="right">
+                    <img src="./Vendors/img/Angular-1.png" alt="">
+                    <span>Saiba mais</span>
+                </div>
+            </div>
+        </section>
+        <section class="topicos">
+            <h2>TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul>
+            <li>
+                <a href="#">Android</a>
+            </li>
+            <li>
+                <a href="#">Marketing Digital</a>
+            </li>
+            <li>
+                <a href="#">Agile</a>
+            </li>
+            <li>
+                <a href="#">Startups</a>
+            </li>
+            <li>
+                <a href="#">HTML e CSS</a>
+            </li>
+            <li>
+                <a href="#">Python</a>
+            </li>
+            <li>
+                <a href="#">OO</a>
+            </li>
+            <li>
+                <a href="#">Java</a>
+            </li>
+        </ul>
+    </section>
+
+    <footer>
+        <section class="contato">
+            <h2>Fique por dentro das novidades!</h2>
+            <p>Atualizações de e-books, novos livros, promoções e outros.</p>
+            <input type="email" placeholder="Cadastre seu e-mail">
+        </section>
+        <hr />
+            <h2 class="titulo_footer">Grupo Alura</h2>
+        </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./Vendors/js/swiper.js"></script>
